--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -1,5 +1,6 @@
 @import url('/node_modules/codemirror/lib/codemirror.css');
 @import url('/node_modules/codemirror/theme/neo.css');
+@import url('./report-hint.css');
 
 .discovery[data-dzen] .page-report > :not(.data-view),
 .discovery[data-dzen] .page-report .view-switcher {
@@ -61,7 +62,7 @@
     line-height: 18px; 
     border-color: #aaa;
     border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(142,142,142,.2);
+    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
     resize: vertical;
 }
 .page-report textarea:focus {
@@ -77,7 +78,7 @@
     font-size: 12px;
     border: 1px solid #aaa;
     border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(142,142,142,.2);
+    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
 }
 .page-report .CodeMirror-scroll {
     min-height: 6.5em;
@@ -265,4 +266,9 @@
 .page-report .editor-toolbar-view-dict .editor-toolbar-view-list .view {
     color: #7badbd;
     white-space: nowrap;
+}
+
+.CodeMirror,
+.CodeMirror-scroll {
+    overflow: visible !important;
 }
