--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -2,8 +2,8 @@
 @import url('/node_modules/codemirror/theme/neo.css');
 @import url('./report-hint.css');
 
-.discovery[data-dzen] .page-report > :not(.data-view),
-.discovery[data-dzen] .page-report .view-switcher {
+.discovery[data-dzen] .page-report > :not(.report-content),
+.discovery[data-dzen] .page-report .view-editor-form {
     display: none;
 }
 .page-report {
@@ -96,19 +96,19 @@
 .page-report .data-query-result {
     margin: 1em 0 1em -40px;
 }
-.page-report .view-switcher {
+.page-report .view-editor-form {
     margin: 0 -40px 12px;
 }
-.page-report .view-switcher .tabs {
+.page-report .view-editor-form .tabs {
     overflow: hidden;
     display: inline-block;
     vertical-align: top;
 }
-.page-report .view-switcher .tabs.presets {
+.page-report .view-editor-form .tabs.presets {
     margin-left: 3ex;
 }
 .page-report .data-query-result::before,
-.page-report .view-switcher .tabs::before {
+.page-report .view-editor-form .tabs::before {
     padding: 3px 4px;
     width: 40px;
     text-align: right;
@@ -120,18 +120,18 @@
     float: left;
     content: 'Data:';
 }
-.page-report .view-switcher .tabs.view-mode::before {
+.page-report .view-editor-form .tabs.view-mode::before {
     display: inline-block;
     content: 'View:';
 }
-.page-report .view-switcher .tabs.presets::before {
+.page-report .view-editor-form .tabs.presets::before {
     content: 'View presets:'
 }
 .page-report .data-query-result > * {
     overflow: hidden;
 }
 .page-report .data-query-result .error,
-.page-report .data-view .content .error {
+.page-report .report-content .error {
     display: block;
     overflow: hidden;
     border-left: 3px solid #f33;
@@ -143,16 +143,16 @@
     font-size: 11px;
 }
 .page-report .data-query-result .error::before,
-.page-report .data-view .content .error::before {
+.page-report .report-content .error::before {
     display: block;
     margin-bottom: .5em;
     content: 'Query error';
     font-size: 16px;
 }
-.page-report .data-view .content .error::before {
+.page-report .report-content .error::before {
     content: 'View build error';
 }
-.page-report .view-switcher .tab {
+.page-report .view-editor-form .tab {
     display: inline-block;
     margin: 0 1px 1px 0;
     padding: 2px 12px;
@@ -161,57 +161,57 @@
     text-transform: capitalize;
     cursor: pointer;
 }
-.page-report .view-switcher .tab:first-child {
+.page-report .view-editor-form .tab:first-child {
     border-top-left-radius: 4px;
 }
-.page-report .view-switcher .presets .tab:first-child {
+.page-report .view-editor-form .presets .tab:first-child {
     border-bottom-left-radius: 4px;
 }
-.page-report .view-switcher .tab.active:first-child {
+.page-report .view-editor-form .tab.active:first-child {
     border-bottom-left-radius: 4px;
     padding-bottom: 2px;
     margin-bottom: 1px;
 }
-.page-report .view-switcher .tab:last-child {
+.page-report .view-editor-form .tab:last-child {
     border-top-right-radius: 4px;
 }
-.page-report .view-switcher .tab:last-child:not(.active) {
+.page-report .view-editor-form .tab:last-child:not(.active) {
     border-bottom-right-radius: 4px;
 }
-.page-report .view-switcher .tab.active {
+.page-report .view-editor-form .tab.active {
     padding-bottom: 3px;
     margin-bottom: 0;
     background: #e8f5fd;
     cursor: default;
 }
-.page-report .view-switcher .tab:not(.active):hover {
+.page-report .view-editor-form .tab:not(.active):hover {
     background: #e4e4e4;
 }
-.page-report .query-view-setup {
+.page-report .view-editor {
     padding: 8px 40px;
     margin-bottom: 1px;
     background: #e8f5fd;
     border-radius: 0 4px 4px 4px;
 }
-.page-report .data-query-header {
+.page-report .report-header {
     display: flex;
     flex-direction: row;
     margin: 22px 0 25px;
     line-height: 1.2;
 }
-.discovery[data-dzen] .page-report .data-query-header {
+.discovery[data-dzen] .page-report .report-header {
     display: flex;
     margin-right: 10px;
 }
-.page-report .data-query-title {
+.page-report .report-header-text {
     flex: 1;
     position: relative;
     font-size: 220%;
 }
-.page-report .data-query-title::before {
+.page-report .report-header-text::before {
     content: attr(data-title);
 }
-.page-report .data-query-title input {
+.page-report .report-header-text input {
     font: inherit;
     position: absolute;
     top: 0;
@@ -221,7 +221,7 @@
     padding: 0;
     visibility: hidden;
 }
-.page-report .data-query-title .timestamp {
+.page-report .report-header-text .timestamp {
     display: block;
     font-size: 10px;
     color: #ccc;
@@ -231,11 +231,10 @@
     margin-left: 10px;
     margin-top: -3px;
 }
-.page-report .data-query-view-options .toggle-fullscreen {
+.page-report .data-query-view-options button {
     width: 42px;
     height: 42px;
-    background: url(./report-fullscreen.svg) center no-repeat;
-    background-size: 25px;
+    background: center no-repeat;
     border-radius: 5px;
     border: none;
     text-indent: -500px;
@@ -244,17 +243,39 @@
     opacity: .5;
     outline: none;
 }
-.page-report .data-query-view-options .toggle-fullscreen:hover,
-.page-report .data-query-view-options .toggle-fullscreen:focus {
+.page-report .data-query-view-options button:hover,
+.page-report .data-query-view-options button:focus {
     background-color: #f8f8f8;
     opacity: 1;
 }
-.discovery[data-dzen] .page-report .data-query-view-options .toggle-fullscreen {
+.page-report .data-query-view-options .toggle-fullscreen {
+    background-image: url(./report-fullscreen.svg);
+    background-size: 25px;
+}
+.page-report .data-query-view-options .edit-mode {
+    background-image: url(./report-edit.svg);
+    background-size: 20px;
+}
+.page-report .data-query-view-options .edit-mode:not(.disabled) {
+    opacity: 1;
+}
+.page-report .data-query-view-options .edit-mode.disabled {
+    filter: grayscale();
+}
+.discovery[data-dzen] .page-report .data-query-view-options .edit-mode {
+    display: none;
+}
+.discovery[data-dzen] .page-report .data-query-view-options button:last-child {
     margin-right: -10px;
+}
+.discovery[data-dzen] .page-report .data-query-view-options .read-write-mode {
+    display: none;
+}
+.discovery[data-dzen] .page-report .data-query-view-options .toggle-fullscreen {
     background-image: url(./report-cancel-fullscreen.svg);
 }
-.discovery:not([data-dzen]) .page-report .data-query-title input:focus,
-.discovery:not([data-dzen]) .page-report .data-query-title:hover input {
+.discovery:not([data-dzen]) .page-report .report-header-text input:focus,
+.discovery:not([data-dzen]) .page-report .report-header-text:hover input {
     visibility: visible;
 }
 .page-report .editor-toolbar-view-dict {
@@ -270,5 +291,5 @@
 
 .CodeMirror,
 .CodeMirror-scroll {
-    overflow: visible !important;
+    overflow-y: visible !important;
 }
