--- a/client/views/index.css
+++ b/client/views/index.css
@@ -13,6 +13,7 @@
 @import url('./input.css');
 @import url('./list-item.css');
 @import url('./lists.css');
+@import url('./popup.css');
 @import url('./section.css');
 @import url('./struct.css');
 @import url('./table-cell.css');
