Extract query and view editors from `report` page to a separate module

--- a/client/views/index.css
+++ b/client/views/index.css
@@ -4,6 +4,7 @@
 @import url('./checkbox.css');
 @import url('./columns.css');
 @import url('./content-filter.css');
+@import url('./editors.css');
 @import url('./expand.css');
 @import url('./fallback.css');
 @import url('./headers.css');
