Add signature view and integrate it in struct view

--- a/client/views/index.css
+++ b/client/views/index.css
@@ -17,6 +17,7 @@
 @import url('./menu-item.css');
 @import url('./popup.css');
 @import url('./section.css');
+@import url('./signature.css');
 @import url('./struct.css');
 @import url('./table-cell.css');
 @import url('./table-row.css');
