Improve signature view: expand/collapse, collect values stat and show in popup on hover

--- a/client/views/signature.css
+++ b/client/views/signature.css
@@ -1,25 +1,75 @@
 .view-signature {
-    padding: 8px 32px 8px 8px;
-    white-space: pre;
+    position: relative;
+    margin: 1px 0;
+    padding: 7px 32px 7px 8px;
+    overflow: auto;
     font-family: Consolas, Monaco, monospace;
     font-size: 11px;
     line-height: 18px;
+    background: #fafafa;
     color: #666;
+    white-space: pre;
 }
 
+.view-signature .expand {
+    padding: 2px;
+    margin: 0 -2px;
+}
 .view-signature .expand:hover {
     border-radius: 4px;
+    background-color: #eee;
+    color: #333;
+    cursor: pointer;
+}
+.view-signature .collapse {
+    margin-left: 2px;
+    padding: 1px 4px;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    font-size: 8px;
+    color: #ddd;
+    background: #fcfcfc;
+    cursor: pointer;
+}
+.view-signature .collapse::before {
+    content: "–";
+}
+.view-signature .collapse:hover {
     color: #333;
     background: #eee;
-    cursor: pointer;
+    border-color: #d0d0d0;
+}
+
+.view-signature .count {
+    vertical-align: middle;
+    padding-left: 3px;
+    font-size: 90%;
+    color: #ddd;
+}
+.view-signature .count:hover {
+    color: #aaa;
 }
 
 .view-signature .property {
+    padding: 2px;
+    margin: 0 -2px;
     color: #bd6476;
+    cursor: pointer;
+}
+.view-signature .property:hover {
+    background-color: #eee;
 }
 .view-signature .optional {
     color: #ff6e13;
+    margin-left: 2px;
 }
+
 .view-signature .type {
+    padding: 2px;
+    margin: 0 -2px 0 -2px;
     color: #07a;
+    cursor: pointer;
+}
+.view-signature .type:hover {
+    background-color: #eee;
 }
