--- a/client/views/editors-hint.css
+++ b/client/views/editors-hint.css
@@ -5,7 +5,7 @@
     list-style: none;
 
     margin: 0;
-    padding: 2px;
+    padding: 0;
 
     box-shadow: 2px 3px 5px rgba(0, 0, 0, .2);
     border-radius: 2px;
@@ -17,14 +17,17 @@
 
     max-height: 20em;
     overflow-y: auto;
+
+    font-family: Consolas, Monaco, monospace;
+    font-size: 12px;
+    line-height: 18px;
 }
 
 .CodeMirror-hint {
     display: flex;
     align-items: baseline;
     margin: 0;
-    padding: 0 4px;
-    border-radius: 2px;
+    padding: 2px 6px;
     white-space: pre;
     color: black;
     cursor: pointer;
