Add emptyText option for menu view and tweak menu-item style

--- a/client/views/index.css
+++ b/client/views/index.css
@@ -15,6 +15,7 @@
 @import url('./list-item.css');
 @import url('./lists.css');
 @import url('./menu-item.css');
+@import url('./menu.css');
 @import url('./popup.css');
 @import url('./section.css');
 @import url('./select.css');
