--- a/client/views/popup.css
+++ b/client/views/popup.css
@@ -10,3 +10,7 @@
     box-shadow: 3px 3px 18px rgba(0,0,0,.2);
     background: white;
 }
+
+.discovery-view-popup.no-hover {
+    pointer-events: none;
+}
