--- a/client/views/index.css
+++ b/client/views/index.css
@@ -1,6 +1,7 @@
 @import url('./alerts.css');
 @import url('./badges.css');
 @import url('./block.css');
+@import url('./button.css');
 @import url('./checkbox.css');
 @import url('./columns.css');
 @import url('./content-filter.css');
