--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -166,6 +166,17 @@
     background: #e8f5fd;
     border-radius: 0 4px 4px 4px;
 }
+.page-report .view-editor .formatting {
+    position: absolute;
+    left: 5px;
+    width: 30px;
+    background-image: url('./report-formatting.svg');
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position: center;
+    border-color: #b9d0df;
+}
+
 .page-report .report-header {
     display: flex;
     flex-direction: row;
@@ -263,6 +274,6 @@
     color: #aaa;
 }
 .page-report .editor-toolbar-view-dict .editor-toolbar-view-list .view {
-    color: #7badbd;
+    color: #75a3bf;
     white-space: nowrap;
 }
