--- a/client/views/tab.css
+++ b/client/views/tab.css
@@ -7,6 +7,7 @@
     border-radius: 5px 5px 0 0;
     cursor: pointer;
     text-transform: capitalize;
+    white-space: nowrap;
 }
 
 .view-tab.active {
