--- a/client/views/input.css
+++ b/client/views/input.css
@@ -1,15 +1,24 @@
+.view-input {
+    display: inline-block;
+}
 .view-input input {
+    position: relative;
     width: 100%;
     box-sizing: border-box;
     margin: 0;
     padding: 8px 12px;
-    font-size: 14px;
+    font-family: inherit;
+    font-size: inherit;
     line-height: 1.2;
-    border: 1px solid #dfdfdf;
+    border: 1px solid #ccc;
     border-radius: 3px;
+    outline: 0;
+}
+.view-input input:hover {
+    border-color: #b3b3b3;
 }
 .view-input input:focus {
-    border-color: #0af;
+    border-color: #b3b3b3;
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2);
-    outline: 0;
+    z-index: 1;
 }
