Add disabled state for `menu-item`

--- a/client/views/menu-item.css
+++ b/client/views/menu-item.css
@@ -9,3 +9,8 @@
     background: #c6dee7;
     cursor: default;
 }
+.view-menu-item.disabled {
+    opacity: .65;
+    background: none;
+    pointer-events: none;
+}
