--- a/client/views/struct.css
+++ b/client/views/struct.css
@@ -116,3 +116,11 @@
     border-radius: 3px;
     user-select: none;
 }
+
+.discovery-view-popup.view-struct-actions-popup .error {
+    font-size: 11px;
+    color: #a00;
+}
+.discovery-view-popup.view-struct-actions-popup .num-delim {
+    padding-left: 3px;
+}
