--- a/client/views/menu-item.css
+++ b/client/views/menu-item.css
@@ -2,6 +2,10 @@
     padding: 4px 12px;
     cursor: pointer;
 }
+.view-menu-item:empty::before {
+    content: '|';
+    visibility: hidden;
+}
 .view-menu-item:hover {
     background: #e0e0e0;
 }
