--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -25,29 +25,6 @@
     color: #aaa;
     font-size: 12px;
 }
-.page-report .editor-toolbar button {
-    padding: 4px 24px;
-    margin-left: 1ex;
-    border-radius: 4px;
-    border: none;
-    background: #0af;
-    color: white;
-    font: inherit;
-    cursor: pointer;
-}
-.page-report .editor-toolbar button:hover {
-    background: #26b7ff;
-    border-color: #0095e0;
-}
-.page-report .editor-toolbar button:focus {
-    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2),  inset 0 1px 1px rgba(142, 142, 142, .2);
-    outline: 0;
-}
-.page-report .editor-toolbar button:active {
-    box-shadow: inset 0 2px 1px #009cea;
-    padding-top: 5px;
-    padding-bottom: 3px;
-}
 .page-report textarea {
     padding: 8px;
     width: 100%;
@@ -170,6 +147,8 @@
     position: absolute;
     left: 5px;
     width: 30px;
+    height: 30px;
+    font-size: 0;
     background-image: url('./report-formatting.svg');
     background-repeat: no-repeat;
     background-size: 20px;
