disable user-select for content-badges

--- a/client/widget/index.css
+++ b/client/widget/index.css
@@ -81,6 +81,7 @@ a:hover {
     right: 40px;
     border-radius: 0 0 5px 5px;
     overflow: hidden;
+    user-select: none;
 }
 .discovery-content-badges > .badge {
     float: left;
