Fix trigger position in expand view to be always in the middle

--- a/client/views/expand.css
+++ b/client/views/expand.css
@@ -41,7 +41,7 @@
     background-size: 12px;
     transition: transform .15s ease-in;
     width: 12px;
-    height: 12px;
+    height: 100%;
     display: inline-block;
     vertical-align: middle;
     opacity: .5;
