--- a/client/pages/report.css
+++ b/client/pages/report.css
@@ -5,10 +5,6 @@
 .page-report {
     padding-top: 0;
 }
-.page-report h3 {
-    font-weight: normal;
-    color: #888;
-}
 .page-report .editor-toolbar {
     display: flex;
     flex-direction: row;
@@ -25,7 +21,7 @@
     color: #aaa;
     font-size: 12px;
 }
-.page-report textarea {
+.page-report .report-editor textarea {
     padding: 8px;
     width: 100%;
     box-sizing: border-box;
@@ -38,7 +34,7 @@
     box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
     resize: vertical;
 }
-.page-report textarea:focus {
+.page-report .report-editor textarea:focus {
     border-color: #0af;
     box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
     outline: 0;
