--- a/client/views/headers.css
+++ b/client/views/headers.css
@@ -3,39 +3,33 @@
     font-weight: normal;
     margin: .812em 0 .65em;
 }
+.view-h1:first-child {
+    margin-top: 0;
+}
 
-.view-h2,
-.view-header {
+.view-h2 {
     font-size: 150%;
     font-weight: normal;
-    margin: .78em 0 .53em;
+    margin: .78em 0;
 }
 
 .view-h3 {
     font-size: 130%;
     font-weight: normal;
-    margin: .73em 0 .43em;
+    margin: .73em 0;
 }
 
-.view-h4 {
-    font-size: 115%;
+.view-h4,
+.view-header {
+    font-size: 120%;
     font-weight: normal;
-    color: #444;
-    margin: .68em 0 .28em;
+    color: #222;
+    margin: .73em 0;
 }
 
 .view-h5 {
     font-size: 110%;
     font-weight: normal;
     color: #777;
-    margin: .63em 0 .23em;
-}
-
-.view-h1:first-child,
-.view-h2:first-child,
-.view-header:first-child,
-.view-h3:first-child,
-.view-h4:first-child,
-.view-h5:first-child {
-    margin-top: 0;
+    margin: .68em 0;
 }
