Removed global styles for <a> and tweak link underline styles

--- a/client/views/index.css
+++ b/client/views/index.css
@@ -12,6 +12,7 @@
 @import url('./image-preview.css');
 @import url('./indicator.css');
 @import url('./input.css');
+@import url('./link.css');
 @import url('./list-item.css');
 @import url('./lists.css');
 @import url('./menu-item.css');
