--- a/client/views/struct.css
+++ b/client/views/struct.css
@@ -102,7 +102,12 @@
 .view-struct .string,
 .view-struct .string a {
     color: #690;
+    text-decoration-color: #bfd3a3;
     white-space: pre;
+}
+.view-struct .string a:hover {
+    color: #527a00;
+    text-decoration-color: currentColor;
 }
 .view-struct .string-length {
     padding-left: 6px;
