Fix indent of empty list text for ul & ol views

--- a/client/views/lists.css
+++ b/client/views/lists.css
@@ -6,6 +6,11 @@
 .view-ul,
 .view-ol {
     margin: 0;
+    padding-left: 0;
+}
+
+.view-ul:not(:empty),
+.view-ol:not(:empty) {
     padding-left: 20px;
 }
 
