Render popup in root node instead of body, fixed widget popup positioning

--- a/client/widget/widget.css
+++ b/client/widget/widget.css
@@ -3,6 +3,7 @@
     font-family: Tahoma, Verdana, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.6;
+    height: 100%;
 }
 
 .discovery-content {
