Implement libs support in module config and related refactoring

--- a/client/model.css
+++ b/client/model.css
@@ -2,4 +2,5 @@
 @import url('../lib.css');
 
 /* generated file (model specific) */
+@import url('./gen/model-libs.css');
 @import url('./gen/model-view.css');
