--- a/src/lib.css
+++ b/src/lib.css
@@ -1,8 +1,8 @@
-@import url('/pages/index.css');
-@import url('/views/index.css');
-@import url('/widget/widget.css');
-@import url('/views/index-complex.css');
-@import url('/app/app.css');
+@import url('./pages/index.css');
+@import url('./views/index.css');
+@import url('./widget/widget.css');
+@import url('./views/index-complex.css');
+@import url('./app/app.css');
 
 .discovery .buildin-view-config-error {
     display: inline-block;
